--- a/src/app/modules/doctor/pages/add-new-patient/components/new-patient-summary/new-patient-summary.component.scss
+++ b/src/app/modules/doctor/pages/add-new-patient/components/new-patient-summary/new-patient-summary.component.scss
@@ -79,3 +79,11 @@ mat-stepper.mat-step-icon-state-edit {
   margin-bottom: 5px;
   margin-top: 20px;
 }
+
+.control-group-section{
+  margin-top: 25px;
+}
+
+.selected-test-section {
+  margin-top: 25px;
+}
