--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/data-tabel/data-tabel.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/data-tabel/data-tabel.component.html
@@ -1,30 +1,30 @@
 <div class="period-section" *ngFor="let element of dataSource">
-  <p class="title-period">{{element.period}} - przed zastosowaniem leczenia farmakologicznego</p>
+  <p class="title-period">{{element.period}} - before pharmacological treatment</p>
   <mat-table class="table-details" [dataSource]="element.data.dataBeforeMed" class="mat-elevation-z8">
 
     <ng-container matColumnDef="parameter">
-      <mat-header-cell *matHeaderCellDef> Parametr </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Parameter </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="meanLeft">
-      <mat-header-cell *matHeaderCellDef> Średnia - lewa strona </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Average - left side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.meanLeft}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="deviationLeft">
-      <mat-header-cell *matHeaderCellDef> Odchylenie - lewa strona  </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Deviation - left side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.deviationLeft}} </mat-cell>
     </ng-container>
 
 
     <ng-container matColumnDef="meanRight">
-      <mat-header-cell *matHeaderCellDef> Średnia - prawa strona </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Average - right side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.meanRight}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="deviationRight">
-      <mat-header-cell *matHeaderCellDef> Odchylenie - prawa strona  </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Deviation - right side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.deviationRight}} </mat-cell>
     </ng-container>
 
@@ -32,7 +32,7 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
-  <p class="title-period">{{element.period}} - po zastosowaniu leczenia farmakologicznego</p>
+  <p class="title-period">{{element.period}} - after pharmacological treatment</p>
   <mat-table class="table-details" [dataSource]="element.data.dataAfterMed" class="mat-elevation-z8">
 
     <ng-container matColumnDef="parameter">
@@ -41,23 +41,23 @@
     </ng-container>
 
     <ng-container matColumnDef="meanLeft">
-      <mat-header-cell *matHeaderCellDef> Średnia - lewa strona </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Average - left side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.meanLeft}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="deviationLeft">
-      <mat-header-cell *matHeaderCellDef> Odchylenie - lewa strona  </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Deviation - left side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.deviationLeft}} </mat-cell>
     </ng-container>
 
 
     <ng-container matColumnDef="meanRight">
-      <mat-header-cell *matHeaderCellDef> Średnia - prawa strona </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Average - right side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.meanRight}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="deviationRight">
-      <mat-header-cell *matHeaderCellDef> Odchylenie - prawa strona  </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Deviation - right side </mat-header-cell>
       <mat-cell *matCellDef="let testInfo"> {{testInfo.deviationRight}} </mat-cell>
     </ng-container>
 
