--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/patient-analysis.component.scss
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/patient-analysis.component.scss
@@ -28,7 +28,7 @@
 .results-info{
   color: $blue;
   font-size: $font-size-m;
-  @include rubik-medium();
+  @include roboto-bold
 }
 
 .mat-mdc-form-field {
