--- a/src/app/modules/doctor/pages/patient-details/information/components/base-information/base-information.component.html
+++ b/src/app/modules/doctor/pages/patient-details/information/components/base-information/base-information.component.html
@@ -1,15 +1,15 @@
 <div class="information-section">
-  <h2 class="subtitle">Podstawowe informacje</h2>
+  <h2 class="subtitle">Basic information</h2>
 
   <div class="information-element">
-    <p class="information-element-title">Imię:</p>
+    <p class="information-element-title">Name:</p>
     <p class="information-element-value">{{patient.name}}</p>
   </div>
 
   <mat-divider></mat-divider>
 
   <div class="information-element">
-    <p class="information-element-title">Nazwisko:</p>
+    <p class="information-element-title">Surname:</p>
     <p class="information-element-value">{{patient.surname}}</p>
   </div>
 
