--- a/src/app/modules/doctor/pages/patient-details/information/information.component.html
+++ b/src/app/modules/doctor/pages/patient-details/information/information.component.html
@@ -1,5 +1,5 @@
 <div class="info-box">
-  <h3 class="title">Informacje o pacjencie</h3>
+  <h3 class="title">Patient information</h3>
     <app-base-information [patient]="selectedPatient"></app-base-information>
     <app-tests-information [dataSource]="dataSource" [showTable]="showTable"></app-tests-information>
 
