--- a/src/app/modules/doctor/pages/patients/components/boxplot-tremor-patient/boxplot-tremor-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/boxplot-tremor-patient/boxplot-tremor-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Przyśpieszenie na poszczególnych osiach (średnie z dni) - porównanie boxplot</mat-card-title>
+    <mat-card-title class="title-card">Angular velocity on individual axes (averages over days) - boxplot comparison</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
