--- a/src/app/modules/doctor/pages/patients/components/density-difference-tremor-patient/density-difference-tremor-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/density-difference-tremor-patient/density-difference-tremor-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Funkcje gęstości prawdopodobieństwa - wartości odstające od średniej (średnie z dni)</mat-card-title>
+    <mat-card-title class="title-card">Probability density functions - outliers from the mean (averages over days)</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
