--- a/src/app/modules/doctor/pages/patients/components/density-tapping-patient/density-tapping-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/density-tapping-patient/density-tapping-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Funkcje gęstości prawdopodobieństwa (średnie z dni) - porównanie parametrów FTT</mat-card-title>
+    <mat-card-title class="title-card">Probability density functions (averages over days) - comparison of FTT parameters</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
