--- a/src/app/modules/doctor/pages/patients/components/histogram-difference-tremor-patient/histogram-difference-tremor-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/histogram-difference-tremor-patient/histogram-difference-tremor-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Histogramy wartości odstających od średniej (średnie z dni) - Badanie drżeń</mat-card-title>
+    <mat-card-title class="title-card">Histograms of deviations from the mean (averages over days) - Tremor test</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
