--- a/src/app/modules/doctor/pages/patients/components/histogram-tremor-patient/histogram-tremor-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/histogram-tremor-patient/histogram-tremor-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Histogramy na poszczególnych danych i wartości zagregowanych (średnie z dni)</mat-card-title>
+    <mat-card-title class="title-card">Histograms on angular velocities on individual axes and angular velocity vector lengths (averages over days)</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
