--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -74,3 +74,13 @@ form {
   display: flex;
   justify-content: center;
 }
+
+.spinner {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
