--- a/src/app/modules/doctor/pages/add-new-patient/components/new-patient-base-form/new-patient-base-form.component.html
+++ b/src/app/modules/doctor/pages/add-new-patient/components/new-patient-base-form/new-patient-base-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="patientFormGroup">
   <div class="form-container">
-    <p>Uzupełnij dane pacjenta:</p>
+    <p>Complete the patient data:</p>
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
       <input matInput placeholder="Email" formControlName="email" required>
@@ -8,19 +8,19 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Imię</mat-label>
-      <input matInput placeholder="imię" formControlName="name" required>
+      <mat-label>Name</mat-label>
+      <input matInput placeholder="Name" formControlName="name" required>
       <mat-error *ngIf="!isControlValid('name')">{{getErrorMessage('name')}}</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Nazwisko</mat-label>
-      <input matInput placeholder="Nazwisko" formControlName="surname" required>
+      <mat-label>Surname</mat-label>
+      <input matInput placeholder="Surname" formControlName="surname" required>
       <mat-error *ngIf="!isControlValid('surname')">{{getErrorMessage('surname')}}</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Hasło</mat-label>
+      <mat-label>Password</mat-label>
       <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" required>
       <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
         <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -29,7 +29,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Powtórz hasło</mat-label>
+      <mat-label>Repeat password</mat-label>
       <input matInput [type]="hidePasswordConfirmation ? 'password' : 'text'"  formControlName="passwordConfirmation" required>
       <button mat-icon-button matSuffix (click)="hidePasswordConfirmation = !hidePasswordConfirmation" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePasswordConfirmation">
         <mat-icon>{{hidePasswordConfirmation ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="button-add-patient-position">
-    <button mat-raised-button matStepperNext (click)="onPatientFormChange()">Dalej</button>
+    <button mat-raised-button matStepperNext (click)="onPatientFormChange()">Next</button>
   </div>
 
 </form>
