--- a/src/app/modules/doctor/pages/patient-details/information/components/tests-information/tests-information.component.scss
+++ b/src/app/modules/doctor/pages/patient-details/information/components/tests-information/tests-information.component.scss
@@ -26,5 +26,12 @@ mat-table {
 mat-cell {
   padding-top: 16px;
   padding-bottom: 16px;
+  display: flex;
+  justify-content: center;
 }
 
+mat-header-cell {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
