--- a/src/app/modules/doctor/pages/patients/components/boxplot-difference-tremor-patient/boxplot-difference-tremor-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/boxplot-difference-tremor-patient/boxplot-difference-tremor-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Wartości odstające od średnie - porównanie boxplot - Badanie drżeń</mat-card-title>
+    <mat-card-title class="title-card">Deviations from the mean - boxplot comparison - Tremor test</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
