--- a/src/app/modules/doctor/pages/patients/components/boxplot-patient/boxplot-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/boxplot-patient/boxplot-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Stukanie palcami - porównanie boxplot parametrów FTT</mat-card-title>
+    <mat-card-title class="title-card">Finger tapping - boxplot comparison of FTT parameters</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
