--- a/src/app/modules/doctor/pages/patients/components/density-tremor-patient/density-tremor-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/density-tremor-patient/density-tremor-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Funkcje gęstości prawdopodobieństwa na poszczególnych osiach i zagredowanych danych (średnie z dni)</mat-card-title>
+    <mat-card-title class="title-card">Probability density functions on angular velocities on individual axes and angular velocity vector lengths (averages over days)</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
