--- a/src/app/modules/doctor/pages/patients/components/histogram-tapping-patient/histogram-tapping-patient.component.html
+++ b/src/app/modules/doctor/pages/patients/components/histogram-tapping-patient/histogram-tapping-patient.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Histogram - porównanie parametrów FTT</mat-card-title>
+    <mat-card-title class="title-card">Histogram - comparison of FTT parameters</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="plotly-summary">
