--- a/src/app/modules/doctor/pages/patients/components/summary-patients/summary-patients.component.html
+++ b/src/app/modules/doctor/pages/patients/components/summary-patients/summary-patients.component.html
@@ -1,21 +1,21 @@
 <mat-card class="mat-card">
   <mat-card-header>
-    <mat-card-title class="title-card">Podsumowanie ilości pacjentów i przeprowadzonych testów</mat-card-title>
+    <mat-card-title class="title-card">Summary of the number of patients and tests carried out</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="summary-patient">
       <div class="table-summary">
         <mat-table class="table-details" [dataSource]="summaryPatient" class="mat-elevation-z8">
           <ng-container matColumnDef="parameter">
-            <mat-header-cell *matHeaderCellDef> Parametr </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> Parameter </mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.parameter}} </mat-cell>
           </ng-container>
           <ng-container matColumnDef="patientPD">
-            <mat-header-cell *matHeaderCellDef> Pacjenci z PD </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> Patients with PD </mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.patientPD}} </mat-cell>
           </ng-container>
           <ng-container matColumnDef="patientControl">
-            <mat-header-cell *matHeaderCellDef> Grupa kontrolna </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> Control group </mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.patientControl}} </mat-cell>
           </ng-container>
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
