--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -12,6 +12,12 @@
   font-weight: 500;
 }
 
+@mixin rubik-bold() {
+  font-family: "Rubik", sans-serif;
+  font-weight: 600;
+}
+
+
 @mixin roboto-regular() {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
